--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 .bundle/
 log/*.log
-pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
+Gemfile.lock
+*.gem
