--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,20 @@ rvm:
   - 2.4
   - 2.5
 
+gemfile:
+  - gemfiles/rails_4_0.gemfile
+  - gemfiles/rails_4_1.gemfile
+  - gemfiles/rails_4_2.gemfile
+  - gemfiles/rails_5.gemfile
+  - gemfiles/rails_5_1.gemfile
+
+matrix:
+   exclude:
+     - rvm: 2.4
+       gemfile: gemfiles/rails_4_0.gemfile
+     - rvm: 2.4
+       gemfile: gemfiles/rails_4_1.gemfile
+     - rvm: 2.5
+       gemfile: gemfiles/rails_4_0.gemfile
+     - rvm: 2.5
+       gemfile: gemfiles/rails_4_1.gemfile
