--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - 2.3
   - 2.4
   - 2.5
+  - 2.6
 
 gemfile:
   - gemfiles/rails_4_0.gemfile
@@ -21,4 +22,8 @@ matrix:
      - rvm: 2.5
        gemfile: gemfiles/rails_4_0.gemfile
      - rvm: 2.5
+       gemfile: gemfiles/rails_4_1.gemfile
+     - rvm: 2.6
+       gemfile: gemfiles/rails_4_0.gemfile
+     - rvm: 2.6
        gemfile: gemfiles/rails_4_1.gemfile
