--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ gemfile:
 
 matrix:
    exclude:
+     - rvm: 2.3
+       gemfile: gemfiles/rails_4_0.gemfile
+     - rvm: 2.3
+       gemfile: gemfiles/rails_4_1.gemfile
+     - rvm: 2.3
+       gemfile: gemfiles/rails_4_2.gemfile
      - rvm: 2.4
        gemfile: gemfiles/rails_4_0.gemfile
      - rvm: 2.4
