--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ gemfile:
   - gemfiles/rails_4_2.gemfile
   - gemfiles/rails_5.gemfile
   - gemfiles/rails_5_1.gemfile
+  - gemfiles/rails_5_2.gemfile
   - gemfiles/activerecord_5_2.gemfile
 
 matrix:
