--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2']
+        ruby-version: ['2.6', '2.7', '3.0', '3.1']
         gemfile:
           - gemfiles/rails_5.gemfile
           - gemfiles/rails_5_1.gemfile
@@ -39,25 +39,17 @@ jobs:
             gemfile: gemfiles/rails_5.gemfile
           - ruby-version: 3.1
             gemfile: gemfiles/rails_5.gemfile
-          - ruby-version: 3.2
-            gemfile: gemfiles/rails_5.gemfile
           - ruby-version: 3.0
             gemfile: gemfiles/rails_5_1.gemfile
           - ruby-version: 3.1
             gemfile: gemfiles/rails_5_1.gemfile
-          - ruby-version: 3.2
-            gemfile: gemfiles/rails_5_1.gemfile
           - ruby-version: 3.0
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby-version: 3.1
-            gemfile: gemfiles/rails_5_2.gemfile
-          - ruby-version: 3.2
             gemfile: gemfiles/rails_5_2.gemfile
           - ruby-version: 3.0
             gemfile: gemfiles/activerecord_5_2.gemfile
           - ruby-version: 3.1
-            gemfile: gemfiles/activerecord_5_2.gemfile
-          - ruby-version: 3.2
             gemfile: gemfiles/activerecord_5_2.gemfile
           - ruby-version: 2.6
             gemfile: gemfiles/rails_7_0.gemfile
