--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,47 +22,28 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0', '3.1']
+        ruby-version: ['3.1', '3.2', '3.3']
         gemfile:
-          - gemfiles/rails_5.gemfile
-          - gemfiles/rails_5_1.gemfile
-          - gemfiles/rails_5_2.gemfile
-          - gemfiles/rails_6_0.gemfile
-          - gemfiles/rails_6_1.gemfile
           - gemfiles/rails_7_0.gemfile
-          - gemfiles/activerecord_5_2.gemfile
-          - gemfiles/activerecord_6_0.gemfile
-          - gemfiles/activerecord_6_1.gemfile
+          - gemfiles/rails_7_1.gemfile
+          - gemfiles/rails_7_2.gemfile
+          - gemfiles/rails_8_0.gemfile
           - gemfiles/activerecord_7_0.gemfile
+          - gemfiles/activerecord_7_1.gemfile
+          - gemfiles/activerecord_7_2.gemfile
+          - gemfiles/activerecord_8_0.gemfile
         exclude:
-          - ruby-version: 3.0
-            gemfile: gemfiles/rails_5.gemfile
-          - ruby-version: 3.1
-            gemfile: gemfiles/rails_5.gemfile
-          - ruby-version: 3.0
-            gemfile: gemfiles/rails_5_1.gemfile
-          - ruby-version: 3.1
-            gemfile: gemfiles/rails_5_1.gemfile
-          - ruby-version: 3.0
-            gemfile: gemfiles/rails_5_2.gemfile
-          - ruby-version: 3.1
-            gemfile: gemfiles/rails_5_2.gemfile
-          - ruby-version: 3.0
-            gemfile: gemfiles/activerecord_5_2.gemfile
-          - ruby-version: 3.1
-            gemfile: gemfiles/activerecord_5_2.gemfile
-          - ruby-version: 2.6
-            gemfile: gemfiles/rails_7_0.gemfile
-          - ruby-version: 2.6
-            gemfile: gemfiles/activerecord_7_0.gemfile
+          - ruby-version: '3.1'
+            gemfile: gemfiles/rails_8_0.gemfile
+          - ruby-version: '3.1'
+            gemfile: gemfiles/activerecord_8_0.gemfile
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
