--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,12 @@ Style/Documentation:
   Enabled: false
 Metrics/CyclomaticComplexity:
   Max: 10
+Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*'
+Lint/ConstantDefinitionInBlock:
+  Exclude:
+    - 'test/**/*'
 AllCops:
   Exclude:
     - 'gemfiles/**/*'
