--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 Style/Documentation:
   Enabled: false
@@ -13,3 +13,5 @@ Lint/ConstantDefinitionInBlock:
 AllCops:
   Exclude:
     - 'gemfiles/**/*'
+  NewCops: enable
+  SuggestExtensions: false
